# UB_Estruct-Dades

Cua_Exemple/: CuaString.cpp  CuaString.h  Persona.cpp  Persona.h  main.cpp
ExerciciCuaEstatica/: CuaStatica  CuaStatica.cpp  CuaStatica.h  MainCuaEstatica  MainCuaEstatica.cpp
ExerciciPilaEstatica/: MainPilaEstatica  MainPilaEstatica.cpp  PilaEstatica  (+2 more)
Practica-3/: ArbreBinari.h  CMakeLists.txt  CercadorMoviesAB.h  CercadorMoviesHeap.h  Exercici_1.h  LecturaDades.h  MinHeap.h  Movie.cpp  Movie.h  NodeBinari.h  NodeHeap.h  main  main.cpp
Practica-3/exercici-1/: Main_Exercici-1.cpp
Practica-3/exercici-2/: ArbreBinari.h  CercadorMoviesAB.h  Exercici_1.cpp  Exercici_1.h  MainArbreBinari  MainArbreBinari.cpp  Movie.cpp  Movie.h  NodeBinari.h
Practica-3/exercici-2 (copia)/: ArbreBinari.h  CercadorMoviesAB.h  Main_Exercici-2.cpp  Movie.cpp  Movie.h  NodeBinari.h
Practica-3/src/: ArbreBinari.h  CercadorMoviesAB.h  CercadorMoviesHeap.h  MinHeap.h  Movie.cpp  Movie.h  NodeBinari.h  NodeHeap.h  main  main.cpp
practica-2/: CMakeLists.txt  Client.h  Clinica.h  Llista.h  MainExercici1.h  MainExercici3.h  Mascota.h  NodeLlista.h  Posicio.h
practica-2/Exercici-1/: MainExercici1  MainPilaEstatica  PilaEstatica  PilaEstatica.cpp  PilaEstatica.h
practica-2/Exercici-2/: CMakeLists.txt  Llista.cpp  Llista.h  MainExercici2  MainExercici2.cpp  MainLlista  MainLlista.cpp  NodeLlista.h  Posicio.cpp  Posicio.h
practica-2/Exercici-3/: CMakeLists.txt  Client.h  Clinica.h  Llista.h  MainExercici3  MainExercici3.cpp  Mascota.h  NodeLlista.h  Poco.cpp  Poco.h  Posicio.h
(+106 files in other folders)
