cmake_minimum_required(VERSION 3.23)
project(Practica_3)

set(CMAKE_CXX_STANDARD 14)

add_executable(Practica_3 exercici-2/MainArbreBinari.cpp exercici-2/ArbreBinari.h
        exercici-2/NodeBinari.h exercici-2/Movie.h exercici-2/Movie.cpp exercici-2/CercadorMoviesAB.h
        exercici-2/Exercici_1.h exercici-2/Exercici_1.cpp)
